# SMOACS

./: .gitignore  LICENSE  README.md  create_dataset.py  demo.ipynb  main.py  pyproject.toml
data/intermidiate/: ionic_radii_dict_super_common.npz  mask_dict_super_common.npz
initial_crystal_candidates/one_atom_site_lattice_except_Si/: mp-10190.vasp  mp-127.vasp  mp-63.vasp  mp-71.vasp
initial_crystal_candidates/random_perovskite_1/: perovskite_1081.vasp  perovskite_1112.vasp  perovskite_1188.vasp  perovskite_1350.vasp  perovskite_1475.vasp  perovskite_1533.vasp  perovskite_1792.vasp  perovskite_1995.vasp  perovskite_2032.vasp  perovskite_2149.vasp  perovskite_3272.vasp  perovskite_3314.vasp  perovskite_35.vasp  perovskite_3506.vasp  perovskite_375.vasp  perovskite_377.vasp  perovskite_3844.vasp  perovskite_3876.vasp  perovskite_514.vasp  perovskite_796.vasp
initial_crystal_candidates/random_perovskite_2/: perovskite_2064.vasp  perovskite_2113.vasp  perovskite_3732.vasp  perovskite_383.vasp
mask_arrays/: ionic_mask_dict_super_common.npz
models/crystalformer/: default.json
src/: alignn_for_inverse_problem.py  alignn_preprocess.py  alignn_utils.py  calculate_scores.py  create_oxidation_mask.py  crystalformer_for_inverse_problem.py  crystalformer_utils.py  lattice_utils.py  load_data.py  load_data_for_alignn.py  load_data_for_crystalformer.py  loss.py  main_experiment.py  main_script.py  optimize_and_evaluate_solutions_for_alignn.py  optimize_and_evaluate_solutions_for_crystalformer.py  optimizer.py  save_data.py  update_graphs_alignn.py  utils.py
(+54 files in other folders)
